MFC: r227809 This patch enables the new/default NFS server's use of shared vnode locking for read, readdir, readlink, getattr and access. It is hoped that this will improve server performance for these operations, since they will no longer be serialized for a given file/vnode.

PR:		167048

Former-commit-id: 148bb4e8b7a615a2e8654753622d53850a9ead7d